--- a/cpp-java-differences.tex
+++ b/cpp-java-differences.tex
@@ -131,6 +131,27 @@ Pixels array[5];
   \end{block}
 \end{frame}
 
+\begin{frame}[fragile]
+  \frametitle{Exceptions}
+  \begin{block}{Java}
+    \begin{itemize}
+    \item \texttt{throws} details exceptions thrown
+    \item “checked” exceptions
+    \end{itemize}
+  \end{block}
+  \begin{block}{C++}
+    \begin{itemize}
+    \item Exception specifications are useless except for \texttt{nothrow}
+      \pause
+    \item Exceptions can be thrown at any point
+      \pause
+    \item Not necessary or typical to check exceptions except where needed
+      \pause
+    \item All code must be exception safe
+    \end{itemize}
+  \end{block}
+\end{frame}
+
 \subsection{Reference handling}
 
 \begin{frame}[fragile]
