--- a/common.tex
+++ b/common.tex
@@ -1,6 +1,6 @@
 \usepackage{beamerthemesplit}
 \beamertemplatenavigationsymbolsempty
-\setbeamertemplate{footline}[page number]{}
+\setbeamertemplate{footline}[frame number]{}
 
 \usepackage{graphicx}
 \usepackage{color}
