--- a/cpp-java-differences.tex
+++ b/cpp-java-differences.tex
@@ -5,7 +5,7 @@
 \title{Bio-Formats C++ Conversion}
 \subtitle{Differences between C++ and Java}
 \author{Roger Leigh}
-\date{March 2014\\University of Dundee}
+\date{Tuesday 7\textsuperscript{th} October 2014\\University of Dundee}
 
 \begin{document}
 
