cmake: options and more feature tests

--- a/cpp-cmake.tex
+++ b/cpp-cmake.tex
@@ -146,6 +146,29 @@
   \end{itemize}
 \end{frame}
 
+\begin{frame}
+  \frametitle{Advanced feature tests}
+
+  \lstinputlisting[firstline=5]{cmake-examples/feature3/CMakeLists.txt}
+
+  \begin{itemize}
+  \item Checking for header or library existence is sometimes insufficient
+  \item Checks can compile, link and execute test code
+  \item Test specific implementation details
+  \end{itemize}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Package options}
+
+  \lstinputlisting[firstline=5]{cmake-examples/options/CMakeLists.txt}
+
+  \begin{itemize}
+  \item User-configurable options
+  \item Customise any aspect of CMake operation
+  \end{itemize}
+\end{frame}
+
 
 \appendix
 
