Unit tests and install

--- a/cpp-cmake.tex
+++ b/cpp-cmake.tex
@@ -169,6 +169,27 @@
   \end{itemize}
 \end{frame}
 
+\begin{frame}
+  \frametitle{Unit tests}
+
+  \lstinputlisting[firstline=5]{cmake-examples/unit/CMakeLists.txt}
+
+  \begin{itemize}
+  \item Unit tests are simple programs
+  \end{itemize}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Installation}
+
+  \lstinputlisting[firstline=19]{cmake-examples/install/CMakeLists.txt}
+
+  \begin{itemize}
+  \item Any target or file can be installed
+  \item Installation prefix or any install category may be customised
+  \end{itemize}
+\end{frame}
+
 
 \appendix
 
